fix: fix bleeding top of statement chart (#74)

--- a/packages/components/src/elements/statements-chart/statements-chart.scss
+++ b/packages/components/src/elements/statements-chart/statements-chart.scss
@@ -26,3 +26,7 @@
   margin-left: -10;
   margin-top: 20px;
 }
+
+.railz-statement-chart-container .highcharts-root {
+  min-height: 328px !important;
+}
